--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/styles": "^4.10.0",
+    "@types/d3": "^5.7.2",
     "chart.js": "^2.9.3",
     "clsx": "^1.1.1",
+    "d3": "^6.0.0",
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "lodash": "^4.17.19",
