--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     ]
   },
   "dependencies": {
+    "@date-io/moment": "^1.3.13",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.10.0",
     "@types/d3": "^5.7.2",
     "chart.js": "^2.9.3",
@@ -38,7 +40,7 @@
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "lodash": "^4.17.19",
-    "moment": "^2.27.0",
+    "moment": "^2.28.0",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
